# cookiecutter-uv-lite

./: 404.html  Makefile  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  main.yml
docs/: index.md  prompt_arguments.md  tutorial.md
docs/features/: github-actions.md  linting.md  pytest.md
features/linting/: index.html
features/makefile/: index.html
features/mkdocs/: index.html
features/pytest/: index.html
features/tox/: index.html
features/uv/: index.html
hooks/: post_gen_project.py  pre_gen_project.py
prompt_arguments/: index.html
search/: search_index.json
tests/: conftest.py  test_cookiecutter_uv_lite.py  test_minicookiecutter.py  utils.py
tutorial/: index.html
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.py
{{cookiecutter.project_name}}/data/: README.md
{{cookiecutter.project_name}}/docs/: modules.md
{{cookiecutter.project_name}}/notebooks/: 01-exploratory.ipynb  02-visualization.ipynb  README.md
{{cookiecutter.project_name}}/tests/: conftest.py  test_example.py  test_notebooks.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name|lower|replace('-', '_')}}/: cli.py  example.py  utils.py
