[project]
name = "cookiecutter-uv-lite"
version = "0.0.1"
description = "A lightweight, modern Python project template using uv for blazing-fast dependency management."
authors = [{ name = "Mattia Rigotti" }]
readme = "README.md"
keywords = ['cookiecutter', 'cookiecutter-template', 'cookiecutter-python', 'template', 'uv', 'python', 'project-template']
requires-python = ">=3.9,<4.0"
dependencies = [
  "cookiecutter>=2.1.1",
  "setuptools >= 61.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]


[project.urls]
Repository = "https://github.com/matrig/cookiecutter-uv-lite"
Documentation = "https://matrig.github.io/cookiecutter-uv-lite/"
Homepage = "https://matrig.github.io/cookiecutter-uv-lite/"

[dependency-groups]
dev = [
    "ipython>=8.18.1",
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "pytest-cookies>=0.6.1",
    "pytest-xdist>=3.5.0",
    "tox-uv>=1.11.3",
    "deptry>=0.22.0",
    "mypy>=0.991",
    "pytest-cov>=4.0.0",
    "ruff>=0.9.2",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.19.0",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cookiecutter_uv_lite"]

[tool.setuptools.package-data]
"cookiecutter_uv_lite" = ["*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",  # Show summary of all test outcomes
]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["cookiecutter_uv_lite"]

[tool.mypy]
files = ['cookiecutter_uv_lite']
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.deptry]
extend_exclude = [
  "\\{\\{cookiecutter\\.project_name\\}\\}/.*"
]

[tool.deptry.per_rule_ignores]
DEP002 = ["cookiecutter", "setuptools"]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S603"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
